// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ClipboardText Generator - Snapshot Tests (Intermediate Data) > should produce consistent base styles 1`] = `
{
  "input": {
    "parsed": {
      "fillVariable": "color-secondary",
      "hasBorder": true,
      "strokeVariable": "color-border",
      "textVariable": "text-color-surface",
    },
    "raw": "bg-secondary text-surface ring ring-border",
  },
  "text": [
    "bg-surface",
    "font-mono",
  ],
}
`;

exports[`ClipboardText Generator - Snapshot Tests (Intermediate Data) > should produce consistent intermediate data for all sizes (golden path) 1`] = `
{
  "baseStyles": {
    "input": {
      "parsed": {
        "fillVariable": "color-secondary",
        "hasBorder": true,
        "strokeVariable": "color-border",
        "textVariable": "text-color-surface",
      },
      "raw": "bg-secondary text-surface ring ring-border",
    },
    "text": [
      "bg-surface",
      "font-mono",
    ],
  },
  "sizeConfig": {
    "classes": {
      "base": "text-sm",
      "lg": "text-sm",
      "sm": "text-xs",
    },
    "default": "lg",
    "descriptions": {
      "base": "Default clipboard text size",
      "lg": "Large clipboard text for prominent display",
      "sm": "Small clipboard text for compact UIs",
    },
    "values": [
      "sm",
      "base",
      "lg",
    ],
  },
  "sizes": [
    {
      "buttonSize": "sm",
      "classes": "text-xs",
      "dimensions": {
        "borderRadius": 6,
        "fontSize": 12,
        "gap": 1,
        "paddingX": 8,
      },
      "height": 26,
      "inputClasses": {
        "borderRadius": 6,
        "fontSize": 12,
        "gap": 4,
        "height": 26,
        "paddingX": 8,
      },
      "size": "sm",
    },
    {
      "buttonSize": "base",
      "classes": "text-sm",
      "dimensions": {
        "borderRadius": 8,
        "fontSize": 14,
        "gap": 6,
        "paddingX": 12,
      },
      "height": 36,
      "inputClasses": {
        "borderRadius": 8,
        "fontSize": 14,
        "gap": 6,
        "height": 36,
        "paddingX": 12,
      },
      "size": "base",
    },
    {
      "buttonSize": "lg",
      "classes": "text-sm",
      "dimensions": {
        "borderRadius": 8,
        "fontSize": 14,
        "gap": 8,
        "paddingX": 16,
      },
      "height": 40,
      "inputClasses": {
        "borderRadius": 8,
        "fontSize": 14,
        "gap": 8,
        "height": 40,
        "paddingX": 16,
      },
      "size": "lg",
    },
  ],
  "stylingConfig": {
    "baseTokens": [
      "bg-surface",
      "text-surface",
      "ring-border",
      "border-color",
    ],
    "icons": [
      {
        "name": "ph-clipboard",
        "size": 16,
        "state": "default",
      },
      {
        "name": "ph-check",
        "size": 16,
        "state": "copied",
      },
    ],
    "inputStyles": {
      "base": "bg-secondary text-surface ring ring-border",
      "sizes": {
        "base": "h-9 gap-1.5 rounded-lg px-3 text-base",
        "lg": "h-10 gap-2 rounded-lg px-4 text-base",
        "sm": "h-6.5 gap-1 rounded-md px-2 text-xs",
        "xs": "h-5 gap-1 rounded-sm px-1.5 text-xs",
      },
    },
    "sizeVariants": {
      "base": {
        "buttonSize": "base",
        "classes": "text-sm",
        "dimensions": {
          "borderRadius": 8,
          "fontSize": 14,
          "gap": 6,
          "paddingX": 12,
        },
        "height": 36,
      },
      "lg": {
        "buttonSize": "lg",
        "classes": "text-sm",
        "dimensions": {
          "borderRadius": 8,
          "fontSize": 14,
          "gap": 8,
          "paddingX": 16,
        },
        "height": 40,
      },
      "sm": {
        "buttonSize": "sm",
        "classes": "text-xs",
        "dimensions": {
          "borderRadius": 6,
          "fontSize": 12,
          "gap": 1,
          "paddingX": 8,
        },
        "height": 26,
      },
    },
    "states": {
      "button": [
        "border-color",
      ],
      "input": [
        "bg-secondary",
        "text-surface",
        "ring-border",
      ],
      "text": [
        "bg-surface",
        "font-mono",
      ],
    },
  },
}
`;

exports[`ClipboardText Generator - Snapshot Tests (Intermediate Data) > should produce consistent parsed input size classes for base 1`] = `
{
  "borderRadius": 8,
  "fontSize": 14,
  "gap": 6,
  "height": 36,
  "paddingX": 12,
}
`;

exports[`ClipboardText Generator - Snapshot Tests (Intermediate Data) > should produce consistent parsed input size classes for lg 1`] = `
{
  "borderRadius": 8,
  "fontSize": 14,
  "gap": 8,
  "height": 40,
  "paddingX": 16,
}
`;

exports[`ClipboardText Generator - Snapshot Tests (Intermediate Data) > should produce consistent parsed input size classes for sm 1`] = `
{
  "borderRadius": 6,
  "fontSize": 12,
  "gap": 4,
  "height": 26,
  "paddingX": 8,
}
`;

exports[`ClipboardText Generator - Snapshot Tests (Intermediate Data) > should produce consistent size config for base 1`] = `
{
  "buttonSize": "base",
  "classes": "text-sm",
  "dimensions": {
    "borderRadius": 8,
    "fontSize": 14,
    "gap": 6,
    "paddingX": 12,
  },
  "height": 36,
}
`;

exports[`ClipboardText Generator - Snapshot Tests (Intermediate Data) > should produce consistent size config for lg 1`] = `
{
  "buttonSize": "lg",
  "classes": "text-sm",
  "dimensions": {
    "borderRadius": 8,
    "fontSize": 14,
    "gap": 8,
    "paddingX": 16,
  },
  "height": 40,
}
`;

exports[`ClipboardText Generator - Snapshot Tests (Intermediate Data) > should produce consistent size config for sm 1`] = `
{
  "buttonSize": "sm",
  "classes": "text-xs",
  "dimensions": {
    "borderRadius": 6,
    "fontSize": 12,
    "gap": 1,
    "paddingX": 8,
  },
  "height": 26,
}
`;

exports[`ClipboardText Generator - Snapshot Tests (Intermediate Data) > should produce consistent size config from registry 1`] = `
{
  "classes": {
    "base": "text-sm",
    "lg": "text-sm",
    "sm": "text-xs",
  },
  "default": "lg",
  "descriptions": {
    "base": "Default clipboard text size",
    "lg": "Large clipboard text for prominent display",
    "sm": "Small clipboard text for compact UIs",
  },
  "values": [
    "sm",
    "base",
    "lg",
  ],
}
`;
